<resources>
    <string name="app_name">VscannerAndroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Voucher">Voucher đang được gửi đến khách hàng</string>
    <string name="Name">Nguyen Văn A</string>
    <string name="Phone_label">Thông qua số điện thoại</string>
    <string name="Phone">037281297</string>
    <string name="_2_000_001_10_vnd">2.000.001\n vnd</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="t_n_s_n_ph_m_s_07_n">Tên sản phẩm số 07 \n</string>
    <string name="gi_ti_n">Giá tiền</string>
    <string name="t_n_s_n_ph_m_s_01_10">Tên sản phẩm số 01 \n</string>
    <string name="_2_000_003_10_vnd">2.000.003\n vnd</string>
    <string name="_2_000_000_10_vnd">2.000.000 \n vnd</string>
    <string name="t_n_s_n_ph_m_s_05_n">Tên sản phẩm số 05 \n</string>
    <string name="_2_000_006_10_vnd">2.000.006\n vnd</string>
    <string name="t_n_s_n_ph_m_s_02_10">Tên sản phẩm số 02\n</string>
    <string name="t_n_s_n_ph_m_s_03_n">Tên sản phẩm số 03 \n</string>
    <string name="_2_000_002_10_vnd">2.000.002\n vnd</string>
    <string name="t_n_s_n_ph_m_s_04_n">Tên sản phẩm số 04 \n</string>
    <string name="_2_000_004_10_vnd">2.000.004\n vnd</string>
    <string name="t_n_s_n_ph_m_s_06_n">Tên sản phẩm số 06 \n</string>
    <string name="_2_000_005_10_vnd">2.000.005\n vnd</string>
</resources>