<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoodbyeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:background="@color/fitus_dark_blue">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_vmamahoriz"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:background="@drawable/main_screen_lightblue_container1"-->
<!--        >-->
<!--    </LinearLayout>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_screen_lightblue_container1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/fitus_white"
            android:layout_gravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                tools:ignore="UselessParent"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:elevation="2dp"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="60dp">
                    <ImageView
                        android:id="@+id/back_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_homefitus"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        tools:ignore="ContentDescription"
                        android:focusable="true" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_envelope_open"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="300dp"
                android:text="@string/Voucher"
                android:textAlignment="center"
                android:textColor="@color/fitus_white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/Name"
                android:textAlignment="center"
                android:textColor="@color/fitus_white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/Phone_label"
                android:textAlignment="center"
                android:textColor="@color/fitus_white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/Phone"
                android:textAlignment="center"
                android:textColor="@color/fitus_white"
                android:textSize="20sp"/>
        </LinearLayout>


    </FrameLayout>


</LinearLayout>

